--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
-    "aes-js": "^3.1.2",
-    "bcrypt": "^5.0.0"
+    "openpgp": "^4.10.9"
   },
   "type": "module"
 }
