--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
-    "openpgp": "^4.10.9"
+    "openpgp": "^5.0.0-1"
   },
   "type": "module"
 }
